# ooddiitt

./: .clang-format  .gitignore  CMakeLists.txt  README.md  opt-klee.srctrlprj
clang-4.0.0-updates/: GenericDomTreeConstruction.h
docs/notes/: .gitignore
docs/notes/src/: build.ninja  building_klee.md
include/klee/: Constraints.h  ExecutionState.h  Expr.h  Interpreter.h  TestCase.h  invariants.h  klee.h
include/klee/Internal/ADT/: KTest.h  MapOfSets.h
include/klee/Internal/Module/: ClangInfo.h  InstructionInfoTable.h  KInstruction.h  KModule.h  ModuleTypes.h
include/klee/Internal/Support/: Debug.h  ErrorHandling.h  ModuleUtil.h  Timer.h
include/klee/Internal/System/: Marker.h  Memory.h  ProgInfo.h
include/klee/util/: Assignment.h  CommonUtil.h  ExprSMTLIBPrinter.h  JsonUtil.h
lib/: CMakeLists.txt
lib/Basic/: CMakeLists.txt  CmdLineOptions.cpp  CommonUtil.cpp  KTest.cpp
lib/Core/: AddressSpace.cpp  AddressSpace.h  CMakeLists.txt  Context.cpp  Context.h  ExecutionState.cpp  Executor.cpp  Executor.h  ExecutorTimers.cpp  Interpreter.cpp  LocalExecutor.cpp  LocalExecutor.h  Memory.cpp  Memory.h  MemoryManager.cpp  MemoryManager.h  ObjectHolder.h  Searcher.cpp  SeedInfo.cpp  SpecialFunctionHandler.cpp  SpecialFunctionHandler.h  StatsTracker.cpp  SystemModel.cpp  SystemModel.h  TimedSolver.cpp  TimedSolver.h  TimingSolver.cpp  TimingSolver.h  UserSearcher.cpp  UserSearcher.h
lib/Expr/: Assigment.cpp  Expr.cpp  ExprSMTLIBPrinter.cpp  Parser.cpp
lib/Json/: CMakeLists.txt  JsonUtil.cpp  jsoncpp.cpp
lib/Module/: CMakeLists.txt  FnMarker.cpp  InstructionInfoTable.cpp  IntrinsicCleaner.cpp  KInstruction.cpp  KModule.cpp  MDBuilder.h  ModuleTypes.cpp  ModuleTypes.h  ModuleUtil.cpp  Optimize.cpp  Passes.h  SplitInit.cpp  StructFold.cpp
lib/Solver/: AssignmentValidatingSolver.cpp  CexCachingSolver.cpp  CoreSolver.cpp  FastCexSolver.cpp  IndependentSolver.cpp  STPSolver.cpp  Solver.cpp  Z3Builder.cpp  Z3Solver.cpp
lib/Support/: CMakeLists.txt  ErrorHandling.cpp  PrintVersion.cpp
llvm-3.4-patches/: cp-patches
llvm-3.4-patches/include/llvm/ADT/: DenseMap.h
llvm-3.4-patches/include/llvm/CodeGen/: SelectionDAGNodes.h
patches/uclibc/libc/string/: _collate.c  strxfrm.c  strxfrm_l.c  wcsxfrm.c  wcsxfrm_l.c
pgklee-uclibc/: config
runtime/: CMakeLists.txt  Makefile  Makefile.cmake.bitcode
runtime/Intrinsic/: Makefile  Makefile.cmake.bitcode
runtime/Intrinsic-32/: Makefile  Makefile.cmake.bitcode
runtime/Intrinsic-64/: Makefile  Makefile.cmake.bitcode
runtime/POSIX-32/: Makefile  Makefile.cmake.bitcode
runtime/POSIX-64/: Makefile  Makefile.cmake.bitcode
runtime/klee-libc/: Makefile  Makefile.cmake.bitcode
test/Local/: .clang-format  .gitignore  amatch.c  astyle-options  del_ele.c  dodash.c  lib.c  mark.h  old_replace.json  old_replace_marked.c  paths.ipynb  prep_file  print_tokens_frags.c  print_tokens_guided.c  print_tokens_marked.c  replace.json  replace_frags.c  replace_guided.c  replace_guided_full.c  replace_marked.c  results.txt  schedule_frags.c  schedule_guided.c  schedule_marked.c  state-gen.c  state-gen.json  stclose.c  stream.h  ternary.json  ternary_marked.c  test.c  test.json  test2.c  test3.c  test3.json  test4.c  test5.c  test6.c  test7.c  test_bracket.c  (+4 more)
test/Local/annot/: annot.c  annot.json  annot_cil.c  annot_decil.c  annot_marked.c  annot_return.c
test/Local/annot/cfgs/: cfg.annot_bar.json  cfg.annot_foo.json  cfg.annot_foo1.json  cfg.annot_foo2.json  cfg.foo.json  cfg.foo1.json  cfg.foo2.json
test/Local/annot/dots/: cfg.annot_bar.dot  cfg.annot_foo.dot  cfg.annot_foo1.dot  cfg.annot_foo2.dot  cfg.foo.dot  cfg.foo1.dot  cfg.foo2.dot
test/Local/annot/klee-out/: info.txt  run.istats  run.stats  structs.json
test/Local/cfgs/: cfg.bar.json  cfg.foo.json
test/Local/cmp-externfn/: clang-info.json  output
test/Local/cmp-externfn/post/: externfn.c
test/Local/cmp-externfn/prev/: externfn.c
test/Local/cmpstate/: cmpstate1.c  cmpstate2.c  post-state.c  pre-state.c  setup.sh
test/Local/ctype_b/: ctype_b.c
test/Local/ctype_b/brt-klee-tmp/: ctype_b.llm  run.istats  run.stats  (+8 more)
test/Local/diff/: ver1.c  ver2.c
test/Local/externfn/: clang-info.json  externfn.c
test/Local/fnptr/: clang-info.json  fnptr.c
test/Local/fp/: fp.c
test/Local/fpcmp/: fpcmp.c  fpcmp.json  fpcmp_cil.c  fpcmp_decil.c  fpcmp_marked.c  fpcmp_return.c
test/Local/generic/: generic.c
test/Local/gep/: gep.c
test/Local/global/: global.c
test/Local/insert-setlocale/: post-setlocale.c  prev-setlocale.c
test/Local/klee-out/: info.txt  messages.txt  stderr.txt  stdout.txt  test0000100001.json  test0000200001.json  test0000200002.json  test0000200003.json  test0000200004.json  warnings.txt
test/Local/lazy/: lazy.c  setup.sh
test/Local/loop-boom/: loop-boom.c  setup.sh
test/Local/main/: main.c  main1.c  main2.c  update-diffs
test/Local/memory/: memory.c
test/Local/prep/: post-prep.c  pre-prep.c  setup.sh
test/Local/printf/: printf.c
test/Local/record/: record.c
test/Local/replay/: build.sh  replay.c
test/Local/stdin/: test-stdin.c
test/Local/strcmp/: clang-prev.json  post-strcmp.c  prev-strcmp.c  strcmp.c
test/Local/strcpy/: strcpy.c  strcpy.json  strcpy_cil.c  strcpy_marked.c  strcpy_return.c
test/Local/string/: string.c  string1.c
test/Local/structptr/: structptr.c
test/Local/trace/: trace.c
tools/: CMakeLists.txt
tools/brt-diff/: CMakeLists.txt  main.cpp
tools/brt-icmp/: CMakeLists.txt  StateComparison.cpp  StateComparison.h  main.cpp
tools/brt-igen/: CMakeLists.txt  main.cpp
tools/brt-klee/: CMakeLists.txt  main.cpp
tools/brt-prep/: CMakeLists.txt  main.cpp
tools/brt-rcrd/: CMakeLists.txt  main.cpp
tools/brt-replay/: CMakeLists.txt  StateComparison.h  main.cpp
tools/brt-rply/: CMakeLists.txt  StateComparison.cpp  main.cpp
tools/klee/: CMakeLists.txt  main.cpp
tools/ktest-tool/: ktest-tool
tools/lcl-klee/: CMakeLists.txt  main.cpp
tools/opt-klee/: CMakeLists.txt  main.cpp
tools/pg-klee/: CMakeLists.txt  main.cpp
tools/scripts/: brt-dis  brt-gen-diff  brt-verify-trace  brt-vrfy
(+46 files in other folders)
